--- a/package.json
+++ b/package.json
@@ -5,26 +5,25 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev-host": "vite --host",
     "build": "tsc -b && vite build",
-    "preview": "vite preview",
-    "test": "vitest run"
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@preact/signals": "^2.0.0",
-    "preact": "^10.25.3",
-    "preact-iso": "^2.8.1"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
-    "@preact/preset-vite": "^2.9.3",
-    "@testing-library/preact": "^3.2.4",
-    "@testing-library/user-event": "^14.5.2",
-    "autoprefixer": "^10.4.20",
-    "jsdom": "^25.0.1",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.6.2",
-    "vite": "^6.0.5",
-    "vitest": "^2.1.8"
+    "@eslint/js": "^9.32.0",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "@vitejs/plugin-react": "^4.7.0",
+    "eslint": "^9.32.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.39.0",
+    "vite": "^7.1.0"
   }
 }
