--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     },
     "dependencies": {
         "react": "^19.1.1",
-        "react-dom": "^19.1.1",
-        "vite": "^7.1.0"
+        "react-dom": "^19.1.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.32.0",
@@ -25,6 +24,7 @@
         "eslint-plugin-react-refresh": "^0.4.20",
         "globals": "^16.3.0",
         "typescript-eslint": "^8.39.0",
-        "typescript": "~5.8.3"
+        "typescript": "~5.8.3",
+        "vite": "^7.1.0"
     }
 }
